Added dockerimage for init container and lab resources

--- a/k8s/trainingresources/examplesecret.yaml
+++ b/k8s/trainingresources/examplesecret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: application-secret
-type: Opaque # being opaque means that values in the key-value pair is base64 encoded
+type: Opaque # being opaque means that values in the key-value pair are base64 encoded
 data:
   username: YWRtaW4=
   password: YWRtaW4=
