--- a/dockerimages/waitforit/pom.xml
+++ b/dockerimages/waitforit/pom.xml
@@ -68,7 +68,7 @@
                 </executions>
                 <configuration>
                     <repository>${dockerio.registry}/${project.artifactId}</repository>
-                    <tag>${project.version}</tag>
+                    <tag>latest</tag>
                 </configuration>
             </plugin>
         </plugins>
