--- a/code/usermanagement/src/main/resources/application.yaml
+++ b/code/usermanagement/src/main/resources/application.yaml
@@ -10,6 +10,19 @@ logging:
 # Swagger.ui url:
 #http://localhost:8080/swagger-ui.html
 
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+  health:
+    probes:
+      enabled: true
+    livenessState:
+      enabled: true
+    readinessState:
+      enabled: true
+
 #Mongo
 spring:
   data:
